--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dev-connector",
   "version": "1.0.0",
-  "description": "Socail network for developers",
+  "description": "Social network for developers",
   "main": "server.js",
   "scripts": {
     "start": "node server",
