--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.0",
     "cra-template": "1.1.0",
     "moment": "^2.29.1",
+    "node-sass": "4.12.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-moment": "^1.0.0",
