--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,9 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "axios": "^0.21.0",
     "cra-template": "1.1.0",
+    "draft-js": "^0.11.7",
+    "draft-js-emoji-plugin": "^2.1.3",
+    "draft-js-plugins-editor": "^3.0.0",
     "moment": "^2.29.1",
     "node-sass": "4.12.0",
     "react": "^17.0.1",
