--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "cra-template": "1.1.0",
     "draft-js": "^0.11.7",
     "draft-js-emoji-plugin": "^2.1.3",
+    "draft-js-linkify-plugin": "^2.0.2",
     "draft-js-plugins-editor": "^3.0.0",
     "moment": "^2.29.1",
     "node-sass": "4.12.0",
