--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Aaron von Kreisler",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.2",
     "express": "^4.17.1",
@@ -19,8 +20,7 @@
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.11",
-    "normalize-url": "^5.3.0",
-    "request": "^2.88.2"
+    "normalize-url": "^5.3.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
